CSS/main.css
body {
	
background-image:url(https://unsplash.imgix.net/45/Ss2c5MVASdGkVHOwG6n9_Imogene%20Pass.jpg?q=75&fm=jpg&auto=format&s=a76164fe362bb83767b7a3ab6ed9e0e0);
	background-repeat: no-repeat;

	background-size: 100% 100% ;
	font-family: 'Open Sans', sans-serif;
}

 #current-link {
 	text-decoration: 
 }

.uppercase {
	font-size: 30px;
	color: black;
}
h1{
	
	border-bottom: 3px solid black;
	padding-bottom: 5px;
	margin-left: 300px ;
	margin-right: 300px;
}
img{
	width: 500px;
	height: auto;
}
article{
	text-align: center;

} 
h2 {
color: firebrick;
}
article p {
	color: firebrick ;
	width: 400px;
}
.largertextsize {
	font-size: 20px;
	margin-bottom: 0px;
	color: firebrick
;
	text-align: center;
}
nav a {
	color: blue;
}
#Paragraph-2{
	font-size: 20px;
	}
.container {
	width: 1366px;
	height: 667px;
}

@media screen and (max-width:1366px){
	.container {
		width: 100%;
	}
	
	}
	body {
		width: 100%;
	}
	
	}
}
@media all and (max-width:1366px) { /* screen size until 1200px */
    body {
        font-size: 1.5em; /* 1.5x default size */
    }
}
@media all and (max-width: 1000px) { /* screen size until 1000px */
    body {
        font-size: 1.2em; /* 1.2x default size */
        }
    }
@media all and (max-width: 500px) { /* screen size until 500px */
    body {
        font-size: 0.8em; /* 0.8x default size */
        }
    }

